tests/ui/impl-trait/issues/issue-77987.stderr
error: undefined opaque type
  --> $DIR/issue-77987.rs:14:13
   |
LL | fn ice() -> impl Foo<Scope>
   |             ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

